--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     --shade1: hsl(0, 0%, 40%);
     --shade2: hsl(0, 0%, 35%);
     --shade3: hsl(0, 0%, 30%);
+    --border: hsl(0, 0%, 40%);
+    --shadow: #555;
 }
 
 [data-user-color-scheme='dark'] {
@@ -17,6 +19,8 @@
     --shade1: hsl(0, 0%, 75%);
     --shade2: hsl(0, 0%, 99%);
     --shade3: hsl(0, 0%, 90%);
+    --border: hsl(0, 0%, 30%);
+    --shadow: #000;
 }
 
 ::selection {
@@ -63,6 +67,25 @@ h1 {
 p {
     margin: 0 0;
     text-indent: 50px;
+}
+
+.music {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
+.timerose {
+    width: 50%;
+    border: 2px solid var(--border);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-shadow: 0px 10px 13px -7px var(--shadow), 5px 5px 15px -3px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px var(--shadow), 5px 5px 15px -3px rgba(0,0,0,0);
 }
 
 .noselect {
